fix: button css on iOS 15

--- a/src/app.css
+++ b/src/app.css
@@ -84,6 +84,7 @@ button:active {
 
 button {
 	font-family: inherit;
+	color: inherit;
 }
 
 section {
